--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -85,7 +85,7 @@
     "metaTitle": "Your house for sale in Alicante | Inmobiliaria Núcleo",
     "metaDescription": "Sell your Alicante properties for the best price thanks to Inmobiliaria Núcleo",
     "form": {
-      "title": "Sell house fast with us",
+      "title": "Sell your house fast with\u00A0us",
       "subtitle": "Please, fill in the following form to get in touch with the\u00A0Núcleo\u00A0team",
       "subtitle2": "Free valuation without\u00A0commitment",
       "send": "Send",
