--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -39,7 +39,9 @@
     "bathrooms": "Bathrooms",
     "sqrMeters": "Surface",
     "type": "Type",
-    "zone": "Area",
+    "zone": "Zone",
+    "city": "City",
+    "county": "County",
     "terrace": "Terrace",
     "garden": "Garden",
     "elevator": "Elevator",
