--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -39,7 +39,9 @@
     "bathrooms": "Baños",
     "sqrMeters": "Superficie",
     "type": "Tipo",
-    "zone": "Zona",
+    "zone": "Barrio",
+    "city": "Localidad",
+    "county": "Provincia",
     "terrace": "Terraza",
     "garden": "Jardín",
     "elevator": "Ascensor",
